--- a/extensions/team-timezone/package.json
+++ b/extensions/team-timezone/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "team-timezones",
-  "title": "Team Timezones",
-  "description": "",
+  "name": "slack-search",
+  "title": "Slack Search",
+  "description": "Search users, channels and files.",
   "icon": "command-icon.png",
   "author": "thomas",
   "license": "MIT",
   "commands": [
     {
-      "name": "index",
+      "name": "searchUsers",
       "title": "Search Users",
-      "subtitle": "",
+      "subtitle": "Slack",
+      "description": "Check the timezones of your colleagues",
+      "mode": "view"
+    },
+    {
+      "name": "searchChannels",
+      "title": "Search Channels",
+      "subtitle": "Slack",
       "description": "Check the timezones of your colleagues",
       "mode": "view"
     }
@@ -26,22 +33,19 @@
   "dependencies": {
     "@raycast/api": "^1.25.0",
     "@slack/web-api": "^6.4.0",
-    "@types/lodash": "^4.14.176",
-    "@types/node-localstorage": "^1.3.0",
     "lodash": "^4.17.21",
-    "node-emoji-clock": "^0.1.0",
     "node-localstorage": "^2.2.1",
-    "swr": "^1.0.1",
-    "use-async-effect": "^2.2.3"
+    "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.176",
     "@types/node": "~16.10.0",
+    "@types/node-localstorage": "^1.3.0",
     "@types/react": "^17.0.28",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "react-devtools": "^4.19.2",
     "typescript": "^4.4.3"
   },
   "scripts": {
