--- a/extensions/raynab/package.json
+++ b/extensions/raynab/package.json
@@ -54,7 +54,7 @@
     "nanoid": "^3.2.0",
     "node-fetch": "^3.0.0",
     "node-localstorage": "^2.2.1",
-    "swr": "^1.1.2-beta.0",
+    "swr": "^1.3.0",
     "ynab": "^1.25.0"
   },
   "devDependencies": {
